Project2/p2/force-app/main/default/objects/Current_Weather__c/Current_Weather__c.object-meta.xml
<CustomObject>
    <label>Current Weather</label>
    <nameField>
        <displayFormat>CW-{0000000000}</displayFormat>
        <label>Current Weather Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Current Weather</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>