Project2/p2/force-app/main/default/objects/Current_Weather__c/fields/Dew_Point__c.field-meta.xml
<CustomField>
    <fullName>Dew_Point__c</fullName>
    <label>Dew Point</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>