Project2/p2/force-app/main/default/objects/Current_Weather__c/fields/Heat_Index__c.field-meta.xml
<CustomField>
    <fullName>Heat_Index__c</fullName>
    <label>Heat Index</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>