Project2/p2/force-app/main/default/objects/Current_Weather__c/fields/Humidity__c.field-meta.xml
<CustomField>
    <fullName>Humidity__c</fullName>
    <label>Humidity</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>