Project2/p2/force-app/main/default/objects/Current_Weather__c/fields/Sunrise__c.field-meta.xml
<CustomField>
    <fullName>Sunrise__c</fullName>
    <label>Sunrise</label>
    <type>Time</type>
</CustomField>