Project2/p2/force-app/main/default/objects/Current_Weather__c/fields/Wind_Gust__c.field-meta.xml
<CustomField>
    <fullName>Wind_Gust__c</fullName>
    <label>Wind Gust</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>